ingresscontrollers/nginx/acme-blog-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: rewrite
  namespace: default
spec:
  rules:
  - host: www.example.org
    http:
      paths:
      - backend:
          serviceName: acme-blog
          servicePort: 80
        path: /blog(/|$)(.*)
